--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "invariant": "^2.2.4",
     "postcss-value-parser": "^4.2.0",
+    "sass": "^1.69.7",
     "styleq": "^0.1.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
